--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <div id="game"></div>
-    <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="src/init.js"></script>
+
+    <script type="text/javascript" src="src/blossom.js"></script>
+    <script type="text/javascript" src="src/start.js"></script>
+    <script type="text/javascript" src="src/player.js"></script>
+    <script type="text/javascript" src="src/physics.js"></script>
+    <script type="text/javascript" src="src/platform.js"></script>
+
+    <script type="text/javascript" src="src/game.js"></script>
   </body>
 </html>
