Fixing absolute path to relative

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>
       Click Jump
     </title>
-    <script type="text/javascript" src="/lib/crafty.js"></script>
+    <script type="text/javascript" src="lib/crafty.js"></script>
   </head>
   <body>
     <div id="game"></div>
